--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videogames App</title>
+    <title>Cars App</title>
 </head>
 <body>
-    
+    <a href="/cars/">All Cars</a>
+    <a href="/cars/new">Add a Car</a>
+    <h1>Welcome to the Cars App!</h1>
+    <p>A website to view your collection of Cars!</p>
+
 </body>
 </html>
