create POST route to create a new car in server.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <a href="/cars/">All Cars</a>
     <a href="/cars/new">Add a Car</a>
     <h1>Welcome to the Cars App!</h1>
-    <p>A website to view your collection of Cars!</p>
+    <p>Are you a Car lover? This is a website that's all about Cars!</p>
 
 </body>
 </html>
