--- a/views/Cars/new.ejs
+++ b/views/Cars/new.ejs
@@ -10,9 +10,16 @@
     <a href="/cars/">All Cars</a>
     <h1>Add Your Car!</h1>
     <form action="/cars" method="POST">
+        <label for='make'>Make:</label>
+        <input type="text" name="make" id="make"/>
 
+        <label for='model'>Model:</label>
+        <input type="text" name="model" id="model"/>
+        
+        <label for="isFast">Is it Built for Speed?</label>
+        <input type="checkbox" name="isFast" id="isFast"/>
 
-
+        <button type="submit">Add Car </button>
     </form>
 
 </body>
