add files into cars view

--- a/views/Cars/carCollection.ejs
+++ b/views/Cars/carCollection.ejs
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cars App</title>
+    <title>Cars index</title>
 </head>
 <body>
-    <a href="/cars/">All Cars</a>
-    <a href="/cars/new">Add a Car</a>
-    <h1>Welcome to the Cars App!</h1>
-    <p>Are you a Car lover? Thiswebsite is all about it!</p>
+    <h1>All kinds of Cars</h1>
 
+<body>
+    <a href="/cars/">All Cars</a>
+    <h1>All Cars</h1>
+    <a href="/cars/new">Add new Car</a>
+ 
+
+</body>
+    
 </body>
 </html>
