create app.delete route

--- a/views/Cars/carCollection.ejs
+++ b/views/Cars/carCollection.ejs
@@ -10,10 +10,13 @@
 
 <body>
     <a href="/cars/">All Cars</a>
+    <a href="/cars/new">Add New Car</a>
     <h1>All Cars</h1>
-    <a href="/cars/new">Add new Car</a>
- 
-
+ <ul>
+    <% cars.forEach(car => { %>
+        <li><a href='/cars/<%=car._id %>'><%=car.name%></a></li>
+        <% }); %>
+ </ul>
 </body>
     
 </body>
