--- a/views/Cars/carCollection.ejs
+++ b/views/Cars/carCollection.ejs
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cars index</title>
 </head>
-<body>
-    <h1>All kinds of Cars</h1>
 
 <body>
     <a href="/cars/">All Cars</a>
@@ -14,7 +12,9 @@
     <h1>All Cars</h1>
  <ul>
     <% cars.forEach(car => { %>
-        <li><a href='/cars/<%=car._id %>'><%=car.name%></a></li>
+        <li>
+            <a href="/cars/<%= car._id %>"><%= car.make %> <%= car.model%></a>
+        </li>
         <% }); %>
  </ul>
 </body>
