--- a/views/Cars/carCollection.ejs
+++ b/views/Cars/carCollection.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cars index</title>
+    <title>Your Collection</title>
 </head>
 
 <body>
-    <a href="/cars/">All Cars</a>
+    <a href="/cars/">Your Collection</a>
     <a href="/cars/new">Add New Car</a>
-    <h1>All Cars</h1>
+    <h1>Cars</h1>
  <ul>
     <% cars.forEach(car => { %>
         <li>
