--- a/views/Cars/new.ejs
+++ b/views/Cars/new.ejs
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Your Car!</title>
+    <title>Add New Car!</title>
 </head>
 
 <body>
-    <a href="/cars/">All Cars</a>
+    <a href="/cars/">Your Collection</a>
+    <a href="/">Home Page</a>
     <h1>Add Your Car!</h1>
     <form action="/cars" method="POST">
         <label for='make'>Make:</label>
