--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,11 @@
     <title>Cars App</title>
 </head>
 <body>
-    <a href="/cars/">All Cars</a>
+    <a href="/cars/">Your Collection</a>
     <a href="/cars/new">Add a Car</a>
     <h1>Welcome to the Cars App!</h1>
     <p>Are you a Car lover? This website is all about it!</p>
+    <p> Keep track of which cars are made for Speed and which ones will Burn Out!</p>
 
 </body>
 </html>
