--- a/views/Cars/carCollection.ejs
+++ b/views/Cars/carCollection.ejs
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <a href="/">Homepage</a>
     <a href="/cars/">Your Collection</a>
     <a href="/cars/new">Add New Car</a>
     <h1>Cars</h1>
