--- a/views/Cars/edit.ejs
+++ b/views/Cars/edit.ejs
@@ -1,34 +1,32 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cars Edit Page</title>
-</head>
-
-<body>
-    <h1>Car Edit - <%= car.model %></h1>
-    <form method="POST" action="/cars/<%=car._id%>?_method=PUT" 
-    
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cars Index</title>
-</head>
-<body>
-  <h1>All Kinds of Cars</h1>
-  <a href="/">Homepage</a>
-  <a href="/cars/new">Add New Car</a>
-  <h1>All Cars</h1>
-  <ul>
-    <% cars.forEach(car => { %>
-      <li><a href='/cars/<%= car._id %>'><%= car.name %></a></li>
-    <% }) %>
-  </ul>
-</body>
+    <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Edit Your Car</title>
+    </head>
+
+    <body>
+     <h1>Car Edit - <%= car.model %></h1>
+    <form method="POST" action="/cars/<%=car._id%>?_method=PUT">
+
+        <div>
+        <label for="model">model:</label>
+        <input type="text" name="model" value="<%= car.model %>" />
+        </div>
+
+    <div>
+        <label for="make">make:</label>
+        <input type="text" name="make"  value="<%= car.title %>" />
+    </div>
+
+    <div>
+        <label for="isFast">Is it Built for Speed?</label>
+        <input type="checkbox" name="isFast" <% if (car.isFast) { %>checked<% } %> >
+    </div>
+
+    <button type="submit">Update</button>
+
+        </form>
+    </body>
 </html>
